Mon Jul 25 18:40:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/tests/NodeApplicationTest/run_test_ex.pl:
          Corrected NodeApplication path

Mon Jul 25 08:39:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/tests/NodeApplicationTest/run_test.pl:
        * DAnCE/tests/NodeApplicationTest/run_test_ex.pl:
        * DAnCE/tests/NodeApplicationTest/run_test_simple.pl:
          Made these tests independent of setting of CIAO_ROOT

Sun Jul 24 07:45:19 2005  Gan Deng  <dengg@dre.vanderbilt.edu>

	* DAnCE/NodeManager/NodeDaemon_Impl.cpp

	  Fixed an exception emulation warning in Debian_Full_Reactor
	  build.

Sun Jul 24 07:40:19 2005  Gan Deng  <dengg@dre.vanderbilt.edu>

	* DAnCE/Plan_Launcher/Plan_Launcher.cpp

	  Enhanced error output information a little bit by
	  adding process ID and thread ID.

	* DAnCE/ciao/Container_Impl.cpp

	  Fixed exception emulation warnings in Debian_Full_Reactor
	  build.

Sun Jul 24 01:19:21 2005  Gan Deng  <dengg@dre.vanderbilt.edu>

	* DAnCE/Plan_Launcher/Plan_Launcher.cpp
	* DAnCE/Plan_Launcher/Plan_Launcher_Impl.cpp

	  Fixed a bug (memory problem) in the plan_launcher which caused
	  the "tearing down" assembly failure.

	* DAnCE/examples/Hello/descriptors/flattened_deploymentplan.cdp
	* DAnCE/examples/BasicSP/descriptors/flattened_deploymentplan.cdp

	  Added a UUID tag to the flattened deployment plan.

Sat Jul 23 23:11:21 2005  Gan Deng  <dengg@dre.vanderbilt.edu>

	* DAnCE/tests/Minimum/Receiver/Receiver.mpc
	* DAnCE/tests/Minimum/Sender/Sender.mpc

	  Modified shared library names to fix some linking erros
	  on build scoreboard.

        * DAnCE/examples/Hello/descriptors/run_test.pl

	  Fixed the script so naming service could be started
	  correctly.

	* DAnCE/examples/Hello/step-by-step.html

	  Simple instruction about using naming service.

Sat Jul 23 14:53:22 2005  Jaiganesh B  <jai@dre.vanderbilt.edu>

	* DAnCE/ciao/Port_Activator.cpp:
	* DAnCE/ciao/Port_Activator.h: