@@ -1,3 +1,12 @@
+Mon Jul 25 22:14:20 UTC 2005  Jeff Parsons <j.parsons@vanderbilt.edu>
+
+        * CIDLC/SizeTypeCalculator.cpp:
+        
+          Fixed visitor to handle types declared inside the scope of
+          an interface, valuetype, or home. Thanks to Friedhelm Wolf
+          <Friedhelm.wolf@gmx.de> for reporting a CIDL compiler
+          problem with a struct declared inside an interface.
+
 Mon Jul 25 18:40:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * DAnCE/tests/NodeApplicationTest/run_test_ex.pl:
